--- a/src/app/components/pedido/categoria-producto/categoria-producto.component.html
+++ b/src/app/components/pedido/categoria-producto/categoria-producto.component.html
@@ -24,8 +24,7 @@
     <div class="card-body">
       <h5 class="card-title">Alimentos para perros</h5>
       <p class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia atque
-        autem impedit laborum velit repudiandae nam doloremque.
+        Selección de productos alimenticios para perros.
       </p>
       <a href="#" class="btn btn-success" [routerLink]="['/productos', 'alimento-perro', 0]">Ver productos &rarr;</a>
     </div>
@@ -48,8 +47,7 @@
     <div class="card-body">
       <h5 class="card-title">Alimentos para gatos</h5>
       <p class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia atque
-        autem impedit laborum velit repudiandae nam doloremque.
+        Selección de productos alimenticios para gatos.
       </p>
       <a href="#" class="btn btn-success" [routerLink]="['/productos', 'alimento-gato', 0]">Ver productos &rarr;</a>
     </div>
@@ -72,8 +70,7 @@
     <div class="card-body">
       <h5 class="card-title">Antiparasitarios y antipulgas</h5>
       <p class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia atque
-        autem impedit laborum velit repudiandae nam doloremque.
+        Productos de uso casero para el tratamiento de parásitos comunes, internos y externos.
       </p>
       <a href="#" class="btn btn-success" [routerLink]="['/productos', 'antiparasitario', 0]">Ver productos &rarr;</a>
     </div>
@@ -96,8 +93,7 @@
     <div class="card-body">
       <h5 class="card-title">Higiene para mascotas</h5>
       <p class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia atque
-        autem impedit laborum velit repudiandae nam doloremque.
+        Productos para el aseo y cuidado del pelaje de las mascotas.
       </p>
       <a href="#" class="btn btn-success" [routerLink]="['/productos', 'higiene', 0]">Ver productos &rarr;</a>
     </div>
@@ -120,8 +116,7 @@
     <div class="card-body">
       <h5 class="card-title">Accesorios para mascotas</h5>
       <p class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia atque
-        autem impedit laborum velit repudiandae nam doloremque.
+        Productos misceláneos para mascotas.
       </p>
       <a href="#" class="btn btn-success" [routerLink]="['/productos', 'accesorios', 0]">Ver productos &rarr;</a>
     </div>
