--- a/src/app/components/formulario-deuda/formulario-deuda.component.html
+++ b/src/app/components/formulario-deuda/formulario-deuda.component.html
@@ -13,12 +13,15 @@
           else updateSubtitleText
         "
       >
-        Ingrese la información necesaria para registrar la deuda del cliente.
-        {{ clienteAsociado.nombre }} {{ clienteAsociado.apellido }}
+        Ingrese la información necesaria para registrar la deuda de
+        {{ clienteAsociado.nombre }} {{ clienteAsociado.apellido }}.
       </h5>
 
       <ng-template #updateSubtitleText>
-        <h5>Actualice los datos solicitados para guardar la deuda.</h5>
+        <h5>
+          Actualice los datos solicitados para guardar la deuda de
+          {{ clienteAsociado.nombre }} {{ clienteAsociado.apellido }}.
+        </h5>
       </ng-template>
     </div>
   </div>
@@ -34,11 +37,6 @@
               <label for="fecha-deuda" class="form-label">Fecha:</label>
               <div class="input-group">
                 <input
-                  [ngStyle]="
-                    fechaDeuda.value < fechaActual
-                      ? { border: '2px solid red' }
-                      : {}
-                  "
                   type="date"
                   class="form-control"
                   id="fecha-deuda"
@@ -57,17 +55,6 @@
                 >
                   <small class="text-danger"
                     >Se debe ingresar la fecha del pedido.</small
-                  >
-                </div>
-                <div
-                  *ngIf="
-                    (fechaDeuda.touched || fechaDeuda.dirty) &&
-                    fechaDeuda.value < fechaActual
-                  "
-                  class="col-lg-12"
-                >
-                  <small class="text-danger"
-                    >No se puede seleccionar una fecha pasada.</small
                   >
                 </div>
               </div>
@@ -155,10 +142,7 @@
               (click)="registerDebt()"
               class="btn btn-success btn-save-modify mt-4"
               [disabled]="
-                fechaDeuda.invalid ||
-                montoDeuda.invalid ||
-                motivoDeuda.invalid ||
-                fechaDeuda.value < fechaActual
+                fechaDeuda.invalid || montoDeuda.invalid || motivoDeuda.invalid
               "
             >
               Registrar deuda
@@ -170,8 +154,7 @@
                 [disabled]="
                   fechaDeuda.invalid ||
                   montoDeuda.invalid ||
-                  motivoDeuda.invalid ||
-                  fechaDeuda.value < fechaActual
+                  motivoDeuda.invalid
                 "
                 type="submit"
                 class="btn btn-success btn-save-modify mt-4"
